[metadata]
name = databases_watcher
description = Multi database watcher for changes on them
version = file: VERSION
long_description = file: README.md
long_description_content_type = text/markdown
license = License :: OSI Approved :: MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Environment :: Console
    Operating System :: POSIX
    Operating System :: MacOS
    Operating System :: OS Independent
    Operating System :: Microsoft :: Windows
author = Daniel Garcia
maintainer = Daniel Garcia (cr0hn)
maintainer_email = cr0hn@cr0hn.com
url = https://github.com/cr0hn/python-database-watcher

[options]
zip_safe = True
include_package_data = True
packages = find:

